Document specific reservation
